# SpecForge

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  NV_CONTEXT_LOG.md  README.md  biome.json  hooks-config.json  index.html  package.json  skills-lock.json  tsconfig.json  vite.config.ts
.githooks/: nv-context-sync.sh
.githooks/claude-hooks/: block-push-main.ps1  post-compact.ps1  post-edit-format.ps1  pre-commit-gate.ps1  session-start.ps1
.github/workflows/: learn-from-reviews.yml
.sandcastle/: main.ts
.specforge/: .gitignore
docs/: AGENTS.md  PRD-sandcastle-runtime.md  PRD.md  SPEC.md
docs/agent-context/: api-conventions.md  architecture.md  testing-guide.md
scripts/: build-cursor-sidecar.ts
src/: AGENTS.md  App.tsx  cursorAgentRunner.ts  cursorModelsRunner.ts  cursorSidecar.ts  main.tsx  styles.css  types.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  chat.rs  constants.rs  cursor_agent.rs  docker.rs  documents.rs  environment.rs  external_editors.rs  generation.rs  git.rs  lib.rs  main.rs  models.rs  paths.rs  project.rs  secrets.rs  state.rs  workspace.rs
src-tauri/src/chat/: commands.rs  execution.rs  helpers.rs  mod.rs  persistence.rs  prompt.rs
src/components/: AppRail.tsx  CliHealthCard.test.tsx  CliHealthCard.tsx  CodePreview.tsx  ControlColumn.tsx  DiffPreview.tsx  DocumentActionBar.tsx  DocumentEmptyState.tsx  DocumentPane.tsx  ExecutionPanel.tsx  FloatingSearch.tsx  InspectorColumn.tsx  MainWorkspace.tsx  (+10 more)
(+45 files in other folders)
