[package]
name = "specforge"
version = "0.1.0"
description = "SpecForge desktop app"
authors = ["OpenAI Codex"]
edition = "2024"

[package.metadata.tauri-winres]
FileDescription = "SpecForge desktop app"
OriginalFilename = "SpecForge.exe"
ProductName = "SpecForge"

[lib]
name = "specforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
ignore = "0.4"
keyring = "4.0.0"
keyring-core = "1.0.0"
lopdf = "0.36"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
which = "8"
